github_data_collector/src/data/issue_comment/uglide_RedisDesktopManager.txt
**Describe the bug**
windows,vs2019,QT5.14,not compile.

**To Reproduce**
Steps to reproduce the behavior:
1. Go to '...'
2. Click on '....'
3. Scroll down to '....'
4. See error

**Expected behavior**
A clear and concise description of what you expected to happen.

**Screenshots**
If applicable, add screenshots to help explain your problem.

**Environment (please complete the following information):**
 - OS & version: [e.g. Windows 10 1806]
 - Redis-Server version [e.g. 5.0.1]

**Additional context**
Add any other context about the problem here.

I have 2 practically similar servers I use, one is hosted directly by Azure, another is hosted on Azure but managed by ScaleGrid.
Those are standalone servers, not clusters.
Whenever I use RDM to view/edit data on Scale grid managed server, I almost every operation need to reconnect to the server because the RDM loses connection.

**Describe the bug**

I need to persist key , use button `TTL` and set new TTL -1,  After then , key expired.

**To Reproduce**
Click `TTL`
Set New TTL :  -1

**Expected behavior**
Key should persist.

**Screenshots**


**Environment (please complete the following information):**
win10 1607
Desktop build :  2019.5.0

**Additional context**
I saw in log console , when set ttl to -1,  it's show with command `expire key -1`, Which right should be `persist key` .

**Describe the bug**
我在公司内部网络使用Redis Desktop Manager 2019.4 ,由于公司内部网络访问外网需要代理,在开启代理的情况下,我无法访问Redis,报错: Disconnect on error : Connection error : The proxy type is invalid for operation

I use Redis Desktop Manager 2019.4 in the company's internal network. Since the company's internal network requires a proxy to access the external network, I cannot access Redis with the proxy turned on, and the error is: Disconnect on error: Connection error: The proxy type is invalid for operation

**To Reproduce**
Steps to reproduce the behavior:
1. Go to '...'
2. Click on '....'
3. Scroll down to '....'
4. See error

**Expected behavior**
A clear and concise description of what you expected to happen.

**Screenshots**
If applicable, add screenshots to help explain your problem.

**Environment (please complete the following information):**
 - OS & version: [e.g. Windows 10 1806]
 - Redis-Server version [e.g. 5.0.1]

**Additional context**
Add any other context about the problem here.
![image](https://user-images.githubusercontent.com/6103343/69898129-ffbc4100-138f-11ea-9bf8-c01b50485f7e.png)

**Describe the bug**
While set and read key form aws redis cluster tool crash. means just close.

**To Reproduce**
Steps to reproduce the behavior:
1. Create AWS Elasticache cluster with two shards (primary node)
2. Connect via ssh tunneling
3. Connect to Cluster
4. Try add and read key

**Expected behavior**
Tool works without crash

**Screenshots**
no

**Environment (please complete the following information):**
 - OS Ubuntu 18.04, tool version 2019.5
 - Redis-Server version 5.0.5 , 4.0.10

**Additional context**
logs

> Nov 29 12:04:40 redis-desktop-manager_rdm.desktop[444]: Event recieved: "add_key"
> Nov 29 12:04:43 redis-desktop-manager_rdm.desktop[444]: SSH keepalive. Next wake up in  5  seconds.
> Nov 29 12:04:44 redis-desktop-manager_rdm.desktop[444]: Cluster redirect
> Nov 29 12:04:46  kernel: [355469.234332] qredisclient::t[661]: segfault at 20 ip 00007f2454663db3 sp 00007f242a2cefa0 error 4 in libbotan-2.so.13.13.0[7f2453f3b000+9d6000]

**Describe the bug**
The scroll bar on list of keys in the left panel is unusable on a high DPI display (I have a high DPI display - not sure if this makes a difference as that is all I have access to).
The keys list also does not have any keyboard shortcuts (page up, down, ctrl + home etc), so navigating the list via mouse wheel is very tedious and impractical for large lists

**To Reproduce**
Steps to reproduce the behavior:
1. Open RDM
2. Expand a server that has > 100 keys
3. Try to use the scroll bar to scroll down - either via the down chevron or within the scroll bar itself to 'page' down
4. Observe that the scroll bar does not work and the mouse cursor changes to a column-resize cursor

**Expected behavior**
The cursor should stay as per normal when using the scrollbar

**Screenshots**
If applicable, add screenshots to help explain your problem.
![image](https://user-images.githubusercontent.com/641669/69845833-23b35000-12c6-11ea-8f2b-c10374e1d2a6.png)


**Environment (please complete the following information):**
 - Windows 10 1806
 - Redis-Server version 2019.5.176

**Additional context**
Add any other context about the problem here.

**When copying keys from one database to another, the keys do not retain their original TTL.  You must select a new TTL for all keys**

**I would like an option to keep original TTL and copy TTL (for each key) from one database to the other.**
I'm using the SSL option for the connection. I provided an Authority pem file. On test connection, the output is Connection error: The root certificate of the certificate chain is self-signed and, untrusted.

**Describe the solution you'd like**
A checkbox that would allow self signed certficates and connect to the server.

Redis Desktop Manager 2019.4-83abef8

**Describe the bug**
Build failed.

issues:
/usr/local/Cellar/python/3.7.5/Frameworks/Python.framework/Versions/3.7/include/python3.7m/object.h:448: error: expected member name or ';' after declaration specifiers
    PyType_Slot *slots; /* terminated by slot==0. */
    ~~~~~~~~~~~       ^

**To Reproduce**
Steps to reproduce the behavior:
1. Go to '...'
2. Click on '....'
3. Scroll down to '....'
4. See error

**Expected behavior**
A clear and concise description of what you expected to happen.

**Screenshots**
If applicable, add screenshots to help explain your problem.

**Environment (please complete the following information):**
 - OS & version: [e.g. Windows 10 1806]
 - Redis-Server version [e.g. 5.0.1]

**Additional context**
Add any other context about the problem here.

Hi,
How can i see the data is passed by a channel, when we use pubsub? Only "channel name" is shown in "Pub/Sub Channel" tab.

Thanks. 
